# ChangeLog for dev-cpp/ETL
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -ETL-0.04.10.ebuild, +ETL-0.04.11.ebuild:
  Version bump

  29 Jun 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  ETL-0.04.10.ebuild:
  Add IUSE

  18 Jan 2008; (Tommy[D]) tommy100@gmx.de ETL-0.04.10.ebuild:
  Shorten DESCRIPTION + reorder KEYWORDS

  19 Nov 2007; Cillian de Róiste (goibhniu) cillian.deroiste@gmail.com
  ChangeLog:
  Updating ETL, bug 111277, removing empty files dir

  19 Nov 2007; Cillian de Róiste (goibhniu) cillian.deroiste@gmail.com
  -ETL-0.04.09.ebuild, +ETL-0.04.10.ebuild:
  Updating ebuild for ETL, bug 111277, thanks to Ali Sabil, Luc Stepniewski,
  jebas, Steve L and Alexander Kazarin

  27 Jun 2007; Ali Polatel <hawking@gentoo.org> ETL-0.04.09.ebuild:
  removed unneeded empty line

  24 Jun 2007; Jakub Moc <jakub@gentoo.org> -ETL-0.04.08.ebuild,
  +ETL-0.04.09.ebuild:
  version bump, nuke old

  24 Jun 2007; Jakub Moc <jakub@gentoo.org> +ETL-0.04.08.ebuild,
  -ETL-502.ebuild:
  Fix invalid version and invalid SRC_URI

  23 Jun 2007; Steve Long (igli) <slong@rathaus.eclipse.co.uk>
  +ETL-502.ebuild, +metadata.xml:
  New Ebuild ETL support lib for synfig-studio
